test_suite5/ALAN/test_suite/alan-2022-examples/failing/005410_mutation.alan
source u begin leave leave 2 end
